Bug: incorrect gaps

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -125,14 +125,14 @@ input::-webkit-inner-spin-button {
 .toggle__container {
   position: relative;
   display: flex;
-  border: 1px solid var(--white);
+  box-shadow: inset 0 0 0 1px var(--white);
   border-radius: 2px;
   width: 66px;
   height: 30px;
 }
 
 .toggle__container:hover {
-  border: 1px solid var(--color-bg);
+  box-shadow: inset 0 0 0 1px var(--color-bg);
 }
 
 .toggle__input {
@@ -152,32 +152,21 @@ input::-webkit-inner-spin-button {
 }
 
 .toggle__input:focus + .toggle__container {
-  border: 1px solid var(--color-bg-focus);
+  /* box-shadow: inset 0 0 0 1px var(--color-bg-focus); */
 }
 
-.toggle__input:checked + .toggle__container > .toggle__block:last-of-type:hover {
+.toggle__input:checked + .toggle__container > .toggle__block:last-of-type {
   background-color: var(--color-bg);
 }
-.toggle__input:checked + .toggle__container > .toggle__block:first-of-type:hover {
-  background-color: var(--color-bg-hover);
-}
-.toggle__input:not(:checked) + .toggle__container > .toggle__block:last-of-type:hover {
-  background-color: var(--color-bg-hover);
-}
-.toggle__input:not(:checked) + .toggle__container > .toggle__block:first-of-type:hover {
+.toggle__input:not(:checked) + .toggle__container > .toggle__block:first-of-type {
   background-color: var(--color-bg);
 }
 
-.toggle__block:hover {
-  background-color: var(--color-bg-hover);
+.toggle__input:checked + .toggle__container:hover > .toggle__block:last-of-type {
+  border-radius: 0 2px 2px 0;
 }
-
-.toggle__input:not(checked) + .toggle__container {
-  background: linear-gradient(to right, var(--color-bg) 0% 50%, var(--white) 50% 100%);
-}
-
-.toggle__input:checked + .toggle__container {
-  background: linear-gradient(to left, var(--color-bg) 0% 50%, var(--white) 50% 100%);
+.toggle__input:not(:checked) + .toggle__container:hover > .toggle__block:first-of-type {
+  border-radius: 2px 0 0 2px;
 }
 
 .input__wrapper {
